--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,8 +31,7 @@ required = [
   "github.com/docker/distribution/reference",
   "k8s.io/api/core/v1",
   "k8s.io/apimachinery/pkg/apis/meta/v1",
-  "k8s.io/apiserver/pkg/endpoints/request",
-  "github.com/giantswarm/apiextensions/pkg/apis/application/v1alpha1"
+  "k8s.io/apiserver/pkg/endpoints/request"
 ]
 
 
