--- a/helm/app-operator-chart/templates/deployment.yaml
+++ b/helm/app-operator-chart/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
           value: "5"
       containers:
       - name: {{ .Values.name }}
-        image: "quay.io/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         volumeMounts:
         - name: {{ .Values.name }}
           mountPath: /var/run/{{ .Values.name }}/configmap/
