add appCatalog to watch list

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -39,6 +39,14 @@ rules:
 - apiGroups:
     - application.giantswarm.io
   resources:
+    - appcatalogs
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
+    - application.giantswarm.io
+  resources:
     - charts
   verbs:
     - "*"
