divide clusterrole by two roles

--- a/helm/app-operator-chart/values.yaml
+++ b/helm/app-operator-chart/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 name: app-operator
+chart: app-operator-chart
 namespace: giantswarm
 port: 8000
 
