--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -1,27 +1,6 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{ .Values.chart }}
-  labels:
-    app: {{ .Values.name }}
-    giantswarm.io/service-type: "managed"
-rules:
-  - apiGroups:
-      - apiextensions.k8s.io
-    resources:
-      - customresourcedefinitions
-    verbs:
-      - "*"
-  - apiGroups:
-      - application.giantswarm.io
-    resources:
-      - charts
-    verbs:
-      - "*"
----
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRole
-metadata:
   name: {{ .Values.name }}
   labels:
     app: {{ .Values.name }}
@@ -49,14 +28,6 @@ rules:
     - create
     - patch
     - update
-- apiGroups:
-  - application.giantswarm.io
-  resources:
-  - apps
-  verbs:
-  - get
-  - list
-  - watch
 - apiGroups:
     - application.giantswarm.io
   resources:
@@ -105,6 +76,27 @@ rules:
     - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  name: {{ .Values.name }}-chart
+  labels:
+    app: {{ .Values.name }}
+    giantswarm.io/service-type: "managed"
+rules:
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - "*"
+  - apiGroups:
+      - application.giantswarm.io
+    resources:
+      - charts
+    verbs:
+      - "*"
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: {{ .Values.name }}
@@ -133,5 +125,5 @@ subjects:
     namespace: {{ .Values.namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.chart }}
+  name: {{ .Values.name }}-chart
   apiGroup: rbac.authorization.k8s.io
