change the name of another role; avoid name conflict

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -121,7 +121,7 @@ metadata:
     giantswarm.io/service-type: "managed"
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.name }}
+    name: {{ .Values.name }}-chart
     namespace: {{ .Values.namespace }}
 roleRef:
   kind: ClusterRole
