--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -45,7 +45,7 @@ required = [
   name = "github.com/docker/distribution"
 
 [[constraint]]
-  branch = "kubernetes-1.13.2"
+  branch = "master"
   name = "github.com/giantswarm/apiextensions"
 
 [[constraint]]
@@ -61,7 +61,7 @@ required = [
   name = "github.com/giantswarm/micrologger"
 
 [[constraint]]
-  branch = "kubernetes-1.13.2"
+  branch = "master"
   name = "github.com/giantswarm/operatorkit"
 
 [[constraint]]
