--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,6 +50,10 @@ required = [
 
 [[constraint]]
   branch = "master"
+  name = "github.com/giantswarm/kubeconfig"
+
+[[constraint]]
+  branch = "master"
   name = "github.com/giantswarm/microerror"
 
 [[constraint]]
