--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -73,6 +73,10 @@ required = [
   version = "1.3.1"
 
 [[constraint]]
+  name = "gopkg.in/yaml.v2"
+  version = "2.2.2"
+
+[[constraint]]
   name = "k8s.io/api"
   version = "kubernetes-1.13.2"
 
