--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -69,6 +69,10 @@ required = [
   name = "github.com/giantswarm/operatorkit"
 
 [[constraint]]
+  name = "github.com/google/go-cmp"
+  version = "0.2.0"
+
+[[constraint]]
   name = "github.com/spf13/viper"
   version = "1.3.1"
 
