--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,7 +49,7 @@ required = [
   name = "github.com/giantswarm/apiextensions"
 
 [[constraint]]
-  branch = "app-support"
+  branch = "master"
   name = "github.com/giantswarm/kubeconfig"
 
 [[constraint]]
