--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -115,9 +115,9 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.name }}-chart
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Values.name }}-chart
     giantswarm.io/service-type: "managed"
 subjects:
   - kind: ServiceAccount
