--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -19,6 +19,7 @@ rules:
   verbs:
     - get
     - list
+    - patch
     - watch
 - apiGroups:
     - application.giantswarm.io
@@ -121,7 +122,7 @@ metadata:
     giantswarm.io/service-type: "managed"
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.name }}-chart
+    name: {{ .Values.name }}
     namespace: {{ .Values.namespace }}
 roleRef:
   kind: ClusterRole
