--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           fi
 
 
-  e2eTestChartBasic:
+  e2eTestAppBasic:
     environment:
       TEST_DIR: "integration/test/app/basic"
     <<: *e2eTest
@@ -59,7 +59,7 @@ workflows:
     jobs:
       - build
 
-      - e2eTestChartBasic:
+      - e2eTestAppBasic:
           requires:
             - build
 
@@ -68,7 +68,7 @@ workflows:
             branches:
               only: master
           requires:
-            - e2eTestChartBasic
+            - e2eTestAppBasic
 
       - publish_to_stable:
           filters:
