--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -36,14 +36,7 @@ rules:
   verbs:
     - get
     - list
-    - watch
-- apiGroups:
-    - application.giantswarm.io
-  resources:
-    - apps
-  verbs:
-    - get
-    - list
+    - patch
     - watch
 - apiGroups:
   - "rbac.authorization.k8s.io"
