Add permissions to manage configmaps

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -63,6 +63,12 @@ rules:
   - deployments
   verbs:
   - 'create'
+ - apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - "*"
 - nonResourceURLs:
   - "/"
   - "/healthz"
