Update index namespace flag

--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -15,6 +15,9 @@ data:
       listen:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
+      appcatalog:
+        index:
+          namespace: '{{ .Values.namespace }}'
       kubernetes:
         incluster: true
         watch:
