--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -65,7 +65,7 @@ required = [
   name = "github.com/giantswarm/micrologger"
 
 [[constraint]]
-  branch = "master"
+  branch = "kubeconfig"
   name = "github.com/giantswarm/operatorkit"
 
 [[constraint]]
