update helm args

--- a/helm/app-operator-chart/templates/deployment.yaml
+++ b/helm/app-operator-chart/templates/deployment.yaml
@@ -43,6 +43,7 @@ spec:
         - daemon
         - --config.dirs=/var/run/{{ .Values.name }}/configmap/
         - --config.files=config
+        - --service.kubernetes.watch.namespace=""
         livenessProbe:
           httpGet:
             path: /healthz
