blank namespace watch

--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -21,4 +21,4 @@ data:
       kubernetes:
         incluster: true
         watch:
-          namespace: '{{ .Values.namespace }}'
+          namespace: ''
