make watchingNamespace template

--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -21,4 +21,5 @@ data:
       kubernetes:
         incluster: true
         watch:
-          namespace: ''
+          {{ if .Values.watchingNamespace }} namespace: '{{ .Values.watchingNamespace }}' {{ else }} namespace: ''
+          {{ end }}
