--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -21,5 +21,5 @@ data:
       kubernetes:
         incluster: true
         watch:
-          {{ if .Values.watchingNamespace }} namespace: '{{ .Values.watchingNamespace }}' {{ else }} namespace: ''
+          {{ if .Values.watchNamespace }} namespace: '{{ .Values.watchNamespace }}' {{ else }} namespace: ''
           {{ end }}
