make it more simpler

--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -21,5 +21,4 @@ data:
       kubernetes:
         incluster: true
         watch:
-          {{ if .Values.watchNamespace }} namespace: '{{ .Values.watchNamespace }}' {{ else }} namespace: ''
-          {{ end }}
+          namespace: '{{ .Values.watchNamespace }}'
