adding namespace permission onto rbac

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -70,6 +70,12 @@ rules:
   - secrets
   verbs:
   - "*"
+- apiGroups:
+    - ""
+  resources:
+    - namespaces
+  verbs:
+    - get
 - nonResourceURLs:
   - "/"
   - "/healthz"
