adding listing pod permission into rbac

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -73,6 +73,12 @@ rules:
 - apiGroups:
     - ""
   resources:
+    - pods
+  verbs:
+    - list
+- apiGroups:
+    - ""
+  resources:
     - namespaces
   verbs:
     - get
