Moving chartoperator resource into app-operator (#120)
* new chartoperator resource

* wired into app controller

* fmt

* adding listing pod permission into rbac

* updating tiller namespace as giantswarm

* update rbac (2)

* wriring to giantswarm ns

* stop install chart-operator during e2e

* use default cluster dns ip in case of no cluster values

* fix

* fix error case

* update values

* fmt

* Update service/controller/app/v1/resource/chartoperator/create.go

Co-Authored-By: Tim Schindler <xh3b4sd@gmail.com>

* Update service/controller/app/v1/resource/chartoperator/create.go

Co-Authored-By: Tim Schindler <xh3b4sd@gmail.com>

* address review #1

* adding the logic for checking chart-operator CR

* vendor update; e2etemplates

* adding kubeconfig inClster as true for simple test

* vendor update; e2etemplates (2)

* using incluster config for kubeconfig

* Revert "using incluster config for kubeconfig"

This reverts commit 3e996b5187fe765d90a0e6de4dea55529d54020d.

* using minikube kubeconfig instead

* adding debug msg

* change to shipyard

* address review #1

* update test

* update unittest

* revert cancelling on inCluster

* adding pkg/tarball package

* migrating key functions to app controller

* address review #2

* delete unused imports

* address review #3

--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -73,6 +73,18 @@ rules:
 - apiGroups:
     - ""
   resources:
+    - pods
+  verbs:
+    - list
+- apiGroups:
+    - ""
+  resources:
+    - pods/portforward
+  verbs:
+    - create
+- apiGroups:
+    - ""
+  resources:
     - namespaces
   verbs:
     - get
