--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,6 +49,10 @@ required = [
   name = "github.com/giantswarm/apiextensions"
 
 [[constraint]]
+  branch = "add-cr-validation"
+  name = "github.com/giantswarm/e2esetup"
+
+[[constraint]]
   branch = "app-cr-validation"
   name = "github.com/giantswarm/k8sclient"
 
