--- a/helm/app-operator-chart/templates/rbac.yaml
+++ b/helm/app-operator-chart/templates/rbac.yaml
@@ -13,6 +13,12 @@ rules:
   verbs:
   - "*"
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions/status
+  verbs:
+  - "*"
+- apiGroups:
     - application.giantswarm.io
   resources:
     - apps
