--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,7 +50,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/appcatalog"
-  branch = "app_catalog"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/e2e-harness"
