Search the latest catalog (#154)
* update vendor

* testing update

* update vendor

* testing update

* vendor update

* update testing

* vendor update

* change the parameter values

* default catalog hard fixed

* exclude slash

* vendor update

* vendor update

* apply tarball URL creation function

* apply tarball function (2)

* move default-catalog key function into key file

* move it to catalog.go

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,6 +49,10 @@ required = [
   branch = "master"
 
 [[constraint]]
+  name = "github.com/giantswarm/appcatalog"
+  branch = "master"
+
+[[constraint]]
   name = "github.com/giantswarm/e2e-harness"
   branch = "master"
 
