Make tiller image registry configurable

--- a/helm/app-operator-chart/templates/configmap.yaml
+++ b/helm/app-operator-chart/templates/configmap.yaml
@@ -18,6 +18,8 @@ data:
       appcatalog:
         index:
           namespace: '{{ .Values.namespace }}'
+      image:
+        registry: '{{ .Values.Installation.V1.Registry.Domain }}' 
       kubernetes:
         incluster: true
         watch:
