--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -54,7 +54,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/e2e-harness"
-  branch = "tiller-registry"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/e2esetup"
@@ -62,7 +62,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/helmclient"
-  branch = "tiller-registry"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/k8sclient"
