--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -76,9 +76,9 @@ required = [
   name = "github.com/giantswarm/exporterkit"
   branch = "master"
 
-[[override]]
+[[constraint]]
   name = "github.com/giantswarm/helmclient"
-  branch = "check_upgrading"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/k8sclient"
