--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -58,7 +58,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/e2e-harness"
-  branch = "reduce-backoff-time"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/e2esetup"
@@ -78,7 +78,7 @@ required = [
 
 [[constraint]]
   name = "github.com/giantswarm/helmclient"
-  branch = "reduce-backoff-time"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/k8sclient"
