--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ e2eTest: &e2eTest
 
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.4.3
+  architect: giantswarm/architect@0.4.5
 
 jobs:
   build:
@@ -82,12 +82,17 @@ jobs:
         root: .
         paths:
         - ./app-operator
+        - ./architect
+
+  deploy:
+    machine: true
+    steps:
+    - checkout
+    - attach_workspace:
+        at: .
     - deploy:
         command: |
-          if [ "${CIRCLE_BRANCH}" == "master" ]; then
             ./architect deploy
-          fi
-
 
   e2eTestAppBasic:
     environment:
@@ -126,6 +131,14 @@ workflows:
           filters:
             branches:
               only: master
+      - architect/push-to-docker-legacy:
+          name: push-app-operator-to-aliyun-legacy
+          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/app-operator"
+          username_envar: "ALIYUN_USERNAME"
+          password_envar: "ALIYUN_PASSWORD"
+          # Push to Aliyun should execute for non-master branches only once manually approved.
+          requires:
+            - build
 
       - e2eTestAppBasic:
           requires:
@@ -134,3 +147,10 @@ workflows:
       - e2eTestAppKubeConfig:
           requires:
             - build
+      - deploy:
+          name: deploy
+          requires:
+            - push-app-operator-to-aliyun-legacy
+          filters:
+            branches:
+              only: master
