--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,9 +44,9 @@ required = [
   name = "github.com/docker/distribution"
   branch = "master"
 
-[[override]]
+[[constraint]]
   name = "github.com/giantswarm/apiextensions"
-  branch = "chart-version"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/giantswarm/appcatalog"
