--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ orbs:
                   cp << parameters.kind-config >> kind-config.yaml
                 else
                   echo "kind: Cluster" >> kind-config.yaml
-                  echo "apiVersion: kind.x-k8s.io/v1alpha3" >> kind-config.yaml
+                  echo "apiVersion: kind.sigs.k8s.io/v1alpha3" >> kind-config.yaml
                 fi
 
                 kind create cluster --config kind-config.yaml --image quay.io/giantswarm/kind-node:$KUBERNETES_VERSION
