--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ workflows:
 
       - architect/integration-test:
           name: kubeconfig-integration-test
+          env-file: "./integration/test/app/kubeconfig/.env"
           kind-config: "./integration/config/kind-config.yaml"
           setup-script: "./integration/config/setup.sh"
           test-dir: "./integration/test/app/kubeconfig"
