--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,10 +75,10 @@ workflows:
 
       - architect/integration-test:
           name: kubeconfig-integration-test
-          env-file: "./integration/test/app/kubeconfig/.env"
-          kind-config: "./integration/config/kind-config.yaml"
-          setup-script: "./integration/config/setup.sh"
-          test-dir: "./integration/test/app/kubeconfig"
+          env-file: "integration/test/app/kubeconfig/.env"
+          kind-config: "integration/config/kind-config.yaml"
+          setup-script: "integration/config/setup.sh"
+          test-dir: "integration/test/app/kubeconfig"
           requires:
             - build
 
