--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,38 @@ jobs:
 workflows:
   build_e2e:
     jobs:
+      - build:
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-docker:
+          name: push-app-operator-to-quay
+          image: "quay.io/giantswarm/app-operator"
+          username_envar: "QUAY_USERNAME"
+          password_envar: "QUAY_PASSWORD"
+          requires:
+            - build
+
+      - architect/push-to-docker:
+          name: push-app-operator-to-aliyun
+          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/app-operator"
+          username_envar: "ALIYUN_USERNAME"
+          password_envar: "ALIYUN_PASSWORD"
+          requires:
+            - build
+          # Needed to trigger job only on merge to master.
+          filters:
+            branches:
+              only: master
+      - architect/push-to-docker-legacy:
+          name: push-app-operator-to-aliyun-legacy
+          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/app-operator"
+          username_envar: "ALIYUN_USERNAME"
+          password_envar: "ALIYUN_PASSWORD"
+          # Push to Aliyun should execute for non-master branches only once manually approved.
+          requires:
+            - build
 
       - architect/integration-test:
           name: basic-integration-test
@@ -45,3 +77,13 @@ workflows:
           kind-config: "integration/config/kind-config.yaml"
           setup-script: "integration/config/setup.sh"
           test-dir: "integration/test/app/kubeconfig"
+          requires:
+            - build
+
+      - deploy:
+          name: deploy
+          requires:
+            - push-app-operator-to-aliyun-legacy
+          filters:
+            branches:
+              only: master
