--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@dev:integration-test
+  architect: giantswarm/architect@0.8.0
 
 jobs:
   build:
