--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.8.0
+  architect: giantswarm/architect@dev:fix-integration-test
 
 jobs:
   build:
